--- a/orkutaine.css
+++ b/orkutaine.css
@@ -35,7 +35,7 @@
 
 
 #facebook #bluebarRoot h1 > a > span {
-    background-image: url(https://m.epochtimes.com.br/assets/uploads/2014/07/ct-logo-orkut-900-795x447.jpg);
+    background-image: url(https://gustavosapienza.com.br/producao/orkut.png);
     background-repeat: no-repeat;
     display: block;
     outline: none;
@@ -45,7 +45,7 @@
     width: 122px;
     background-size: 88px;
     height: 42px;
-    margin-top: -5px;
+    margin-top: 0px;
     background-position: center;
 }
 
@@ -57,7 +57,13 @@
     margin: 0;
     margin-left: -2px;
     margin-right: 5px;
-    background-color: #fff;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#1e5799+0,cfd6de+0,ffffff+0,cfd6de+100 */
+    background: #1e5799; /* Old browsers */
+    background: -moz-linear-gradient(top,  #1e5799 0%, #cfd6de 0%, #ffffff 0%, #cfd6de 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #1e5799 0%,#cfd6de 0%,#ffffff 0%,#cfd6de 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #1e5799 0%,#cfd6de 0%,#ffffff 0%,#cfd6de 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#cfd6de',GradientType=0 ); /* IE6-9 */
+
 }
 
 #facebook #contentCol {
